<resources>
    <string name="app_name">Form Inputs</string>
    <string name="cantBeEmpty">%s can\'t be empty</string>
    <string name="isRequired">%s is required</string>
    <string name="value">value</string>
    <string name="inValidEmail">Invalid email address</string>
    <string name="inValid">Invalid %s</string>
    <string name="select">Select</string>
    <string name="notSelected">Not selected</string>
    <string name="inValidPhoneNumber">Invalid phone number</string>
    <string name="star">*</string>
    <string name="charactersOnly">300/300 Characters Only</string>
    <string name="label">%s &lt;b&gt; &lt;font color="#FA0602"> %s &lt;font>  &lt;/b&gt;</string>

    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="hintPassword">%s must be at least 8 characters</string>
    <string name="weak">Weak</string>
    <string name="pleaseWait">Please, wait..</string>
    <string name="Submit">Submit</string>
    <string name="passHit">Password must be at least 6 characters long.Password must not be longer than 20 characters.Password must not contain space or unicode characters.</string>
    <string name="passHintLong">Be at least %d characters long</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="doNotMatch">%s do not match</string>
    <string name="include_at_least_one_number">Include at least one number</string>
    <string name="include_at_least_one_special_character">Include at least one special character</string>
    <string name="your_password_need_to">Your password need to:</string>
    <string name="include_at_least_one_upper_case">Include at least one upper case</string>
    <string name="_0">0</string>
    <string name="invalidUrl">Invalid URL</string>
    <string name="isInvalid">%s is invalid</string>
    <string name="remainCharacters">%d / %d Characters Only</string>
    <string name="clear">clear</string>
</resources>
