<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FormInputAutoComplete">
    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="2dp"
        android:text="@string/label"
        style="@style/LabelStyle" />

    <RelativeLayout
        android:id="@+id/layInputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel"
        android:background="@drawable/bg_txt_square"
        android:padding="2dp"
        android:visibility="visible">

        <com.omarshehe.forminputkotlin.widget.AutoCompleteView
            android:id="@+id/txtInputBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_box_height"
            android:layout_toStartOf="@+id/iconDropDown"
            android:layout_toLeftOf="@+id/iconDropDown"
            android:background="#FFFFFF"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/select"
            android:inputType="textAutoComplete"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconDropDown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            app:srcCompat="@drawable/arrow_downtoup" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layInputBox"
        android:fontFamily="@font/roboto_light"
        android:gravity="end"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgNoError"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        app:srcCompat="@drawable/check_green" />


</RelativeLayout>

