<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/lyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLabel"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="2dp"
                android:singleLine="true"
                android:text="@string/label"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgNoError"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/app_name"
                android:visibility="visible"
                app:srcCompat="@drawable/check_anim" />
        </RelativeLayout>



        <com.omarshehe.forminputkotlin.widget.ProgressView
            android:id="@+id/passView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/formInputInput_box_height"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassword"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorTransparent"
                android:hint="@string/app_name"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </com.omarshehe.forminputkotlin.widget.ProgressView>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorRed"
            android:textSize="12sp"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layPassStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPassStrength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/roboto_light"
                android:gravity="end"
                android:text="@string/weak"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconHintTitle"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHintTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHintTitle"
                app:srcCompat="@drawable/lock_alert" />

            <TextView
                android:id="@+id/tvHintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/your_password_need_to"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/iconHintTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconHintUpperCase"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHintUpperCase"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHintUpperCase"
                app:srcCompat="@drawable/ic_close_to_done" />

            <TextView
                android:id="@+id/tvHintUpperCase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/include_at_least_one_upper_case"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconHintUpperCase"
                app:layout_constraintTop_toBottomOf="@+id/tvHintTitle" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grUpperCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvHintUpperCase,iconHintUpperCase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHintUpperCase" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconHintSpecial"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHintSpecial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHintSpecial"
                app:srcCompat="@drawable/ic_close_to_done" />

            <TextView
                android:id="@+id/tvHintSpecial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/include_at_least_one_special_character"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconHintSpecial"
                app:layout_constraintTop_toBottomOf="@+id/tvHintUpperCase" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iconHintSpecial,tvHintSpecial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHintSpecial" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconHintNumber"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHintNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHintNumber"
                app:srcCompat="@drawable/ic_close_to_done" />

            <TextView
                android:id="@+id/tvHintNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/include_at_least_one_number"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconHintNumber"
                app:layout_constraintTop_toBottomOf="@+id/tvHintSpecial" />


            <androidx.constraintlayout.widget.Group
                android:id="@+id/grNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iconHintNumber,tvHintNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHintNumber" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconHintLong"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvHintLong"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHintLong"
                app:srcCompat="@drawable/ic_close_to_done" />

            <TextView
                android:id="@+id/tvHintLong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/passHintLong"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconHintLong"
                app:layout_constraintTop_toBottomOf="@+id/tvHintNumber" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iconHintLong,tvHintLong"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHintLong" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</merge>
